objects/CodeGroup_c__x.object
<CustomObject>
    <fields>
        <fullName>CatalogProfile_c__c</fullName>
        <externalDeveloperName>CatalogProfile__c</externalDeveloperName>
        <label>Catalog Profile</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$$-OSS-SM</fullName>
                    <label>$$-OSS-SM - R/3 Notifications</label>
                </value>
                <value>
                    <fullName>000000001</fullName>
                    <label>000000001 - General Catalog Profile</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - NO DETERMIDED</label>
                </value>
                <value>
                    <fullName>A91</fullName>
                    <label>A91 - CONNECT-UP</label>
                </value>
                <value>
                    <fullName>A92</fullName>
                    <label>A92 - EPISEQ SOFTWARE</label>
                </value>
                <value>
                    <fullName>A94</fullName>
                    <label>A94 - EVISIGHT COMPACT APPLICATION</label>
                </value>
                <value>
                    <fullName>A96</fullName>
                    <label>A96 - VIDAS 3 SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA8</fullName>
                    <label>AA8 - FILMARRAY SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA9</fullName>
                    <label>AA9 - EMAG SOFTWARE</label>
                </value>
                <value>
                    <fullName>B11</fullName>
                    <label>B11 - IMMUNO MICRO PLAQUES</label>
                </value>
                <value>
                    <fullName>B12</fullName>
                    <label>B12 - NUCLISENS (Without transfer)</label>
                </value>
                <value>
                    <fullName>B13</fullName>
                    <label>B13 - DGV</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <label>B14 - BRAZIL CHEM HEMO MICROELISA</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                    <label>B15 - BRAZIL IMMUNOSEROLOGY PRODUCTS</label>
                </value>
                <value>
                    <fullName>B16</fullName>
                    <label>B16 - PPM BRAZIL PRODUCTS</label>
                </value>
                <value>
                    <fullName>B18</fullName>
                    <label>B18 - BTA REAGENT CLINICAL USE</label>
                </value>
                <value>
                    <fullName>B19</fullName>
                    <label>B19 - BTA REAGENT INDUSTRIAL USE</label>
                </value>
                <value>
                    <fullName>B20</fullName>
                    <label>B20 - MB BACT REAGENT</label>
                </value>
                <value>
                    <fullName>B21</fullName>
                    <label>B21 - OBSOLETE  ELISA INDUSTRY</label>
                </value>
                <value>
                    <fullName>B22</fullName>
                    <label>B22 - VIKIA/BIONEXIA</label>
                </value>
                <value>
                    <fullName>B23</fullName>
                    <label>B23 - FOOD EXPERT</label>
                </value>
                <value>
                    <fullName>B24</fullName>
                    <label>B24 - ARGENTINA MICRO PLATES</label>
                </value>
                <value>
                    <fullName>B25</fullName>
                    <label>B25 - IMMUNO BMX MICROELISA</label>
                </value>
                <value>
                    <fullName>B26</fullName>
                    <label>B26 - IMMUNO OTHERS MICROELISA</label>
                </value>
                <value>
                    <fullName>B27</fullName>
                    <label>B27 - OBSOLETE IMMUNOASSAYS DURHAM</label>
                </value>
                <value>
                    <fullName>B28</fullName>
                    <label>B28 - OBSOLETE NUCLISENS ECL REAGENT</label>
                </value>
                <value>
                    <fullName>B29</fullName>
                    <label>B29 - NUCLISENS ISOLATION REAGENTS</label>
                </value>
                <value>
                    <fullName>B3</fullName>
                    <label>B3 - GEN PROBE</label>
                </value>
                <value>
                    <fullName>B30</fullName>
                    <label>B30 - NUCLISENS EASYQ REAGENTS</label>
                </value>
                <value>
                    <fullName>B31</fullName>
                    <label>B31 - APIWEB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_c__c</fullName>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <label>Causes</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Task - Internal Measurement</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Codification - CS</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Service Order Codification - CS</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>Task - CS</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>Codification - Logistic</label>
                </value>
                <value>
                    <fullName>V</fullName>
                    <label>Task - Logistic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CodeGroupLabel_c__c</fullName>
        <externalDeveloperName>CodeGroupLabel__c</externalDeveloperName>
        <label>Code Group Label</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_c__c</fullName>
        <externalDeveloperName>Code__c</externalDeveloperName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_c__c</fullName>
        <externalDeveloperName>Description__c</externalDeveloperName>
        <label>Description</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Inactive__c</externalDeveloperName>
        <label>Inactive</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_CodeGroupKey_c__c</fullName>
        <externalDeveloperName>SAP_CodeGroupKey__c</externalDeveloperName>
        <label>SAP Code Group Key</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_CodeGroup_c__c</fullName>
        <externalDeveloperName>SAP_CodeGroup__c</externalDeveloperName>
        <label>SAP Code Group</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_c__c</fullName>
        <externalDeveloperName>Type__c</externalDeveloperName>
        <label>Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACK</fullName>
                </value>
                <value>
                    <fullName>ACTION</fullName>
                </value>
                <value>
                    <fullName>ACTIONLO</fullName>
                </value>
                <value>
                    <fullName>ADDTOOLS</fullName>
                </value>
                <value>
                    <fullName>ANALYZE</fullName>
                </value>
                <value>
                    <fullName>ASOP</fullName>
                </value>
                <value>
                    <fullName>ATC</fullName>
                </value>
                <value>
                    <fullName>BATCH</fullName>
                </value>
                <value>
                    <fullName>BATCH/SN</fullName>
                </value>
                <value>
                    <fullName>BATCHCUS</fullName>
                </value>
                <value>
                    <fullName>BATCHOE</fullName>
                </value>
                <value>
                    <fullName>BATCHSSC</fullName>
                </value>
                <value>
                    <fullName>BATCHWAR</fullName>
                </value>
                <value>
                    <fullName>BILLCOMM</fullName>
                </value>
                <value>
                    <fullName>BILLCUST</fullName>
                </value>
                <value>
                    <fullName>BILLGOOD</fullName>
                </value>
                <value>
                    <fullName>BILLSLSA</fullName>
                </value>
                <value>
                    <fullName>CBKC</fullName>
                </value>
                <value>
                    <fullName>CHKSN1</fullName>
                </value>
                <value>
                    <fullName>CHKSN2</fullName>
                </value>
                <value>
                    <fullName>CINFOCS</fullName>
                </value>
                <value>
                    <fullName>CINFOCUS</fullName>
                </value>
                <value>
                    <fullName>CINFOMD</fullName>
                </value>
                <value>
                    <fullName>CINFOOE</fullName>
                </value>
                <value>
                    <fullName>CINFOSLS</fullName>
                </value>
                <value>
                    <fullName>CINFOSSC</fullName>
                </value>
                <value>
                    <fullName>COM.DECI</fullName>
                </value>
                <value>
                    <fullName>CONTACT</fullName>
                </value>
                <value>
                    <fullName>CONTACTP</fullName>
                </value>
                <value>
                    <fullName>CONTROL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>CodeGroup__c</externalName>
    <label>Code Group</label>
    <pluralLabel>Code Groups</pluralLabel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>